@@ -5,6 +5,7 @@ import com.vmware.stfdashboard.util.SuiteType;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -16,12 +17,12 @@ public class ApplicationController {
 
     @GetMapping(value = "/sddc-types", produces = MediaType.APPLICATION_JSON_VALUE)
     public List<String> getSddcTypes() {
-        return Arrays.stream(SddcType.values()).map(SddcType::value).toList();
+        return Arrays.stream(SddcType.values()).map(SddcType::value).collect(Collectors.toList());
     }
 
     @GetMapping(value = "/suite-types", produces = MediaType.APPLICATION_JSON_VALUE)
     public List<String> getSuiteTypes() {
-        return Arrays.stream(SuiteType.values()).map(SuiteType::value).toList();
+        return Arrays.stream(SuiteType.values()).map(SuiteType::value).collect(Collectors.toList());
     }
 
 }
